--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://assaf7070.github.io/quicknotes-project/",
+  "homepage": "https://assaf7070.github.io/QuickNotes-project/",
   "name": "my-app",
   "private": true,
   "version": "0.0.0",
